z-index fix

--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -33,6 +33,7 @@ body, html {
   	right: 0;
   	left: 0;
   	padding: 20px;
+  	z-index: -1;
 }
 
 .hero-text h1{
@@ -65,7 +66,7 @@ header{
 	padding: 0;
 	margin: 0;
 	display: block;
-	z-index: 1;
+
 
 }
 
